test-dashboard/main/default/objects/TestResult__c/TestResult__c.object-meta.xml
<CustomObject>
    <description>Result and execution time of a single unit test</description>
    <label>Test Result</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Test Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>