test-dashboard/main/default/objects/TestResult__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>Name of the Test Class</description>
    <label>Class Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>