test-dashboard/main/default/objects/TestResult__c/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <description>Unit test method name</description>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>