test-dashboard/main/default/objects/TestResult__c/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <label>Org Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>