test-dashboard/main/default/objects/TestResult__c/fields/RunTime__c.field-meta.xml
<CustomField>
    <fullName>RunTime__c</fullName>
    <description>Test execution time in ms</description>
    <label>RunTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>