test-dashboard/main/default/objects/TestResult__c/fields/RunTimeInSeconds__c.field-meta.xml
<CustomField>
    <fullName>RunTimeInSeconds__c</fullName>
    <formula>RunTime__c / 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RunTimeInSeconds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>