test-dashboard/main/default/objects/TestResult__c/fields/TestResultId__c.field-meta.xml
<CustomField>
    <fullName>TestResultId__c</fullName>
    <externalId>true</externalId>
    <label>Test Result Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>