test-dashboard/main/default/objects/TestResult__c/fields/TestTimestamp__c.field-meta.xml
<CustomField>
    <fullName>TestTimestamp__c</fullName>
    <description>The date/time when the tests were executed</description>
    <label>RunDate</label>
    <type>DateTime</type>
</CustomField>